# wiki-tools

./: .gitignore  Taskfile.yml  pyproject.toml  taskfile.yml  tools.py  wikipedia.yml  wiktionary.yml
